<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_drawer_home_icon"
            android:icon="@drawable/ic_home"
            android:title="@string/main_txt"
            app:showAsAction="always"/>
        <item
            android:id="@+id/menu_drawer_info_of_city_icon"
            android:icon="@drawable/ic_info"
            android:title="@string/info_txt"
            app:showAsAction="always"/>
        <item
            android:id="@+id/menu_drawer_history_city_icon"
            android:icon="@drawable/ic_history"
            android:title="@string/history_txt"
            app:showAsAction="always"/>
        <item
            android:id="@+id/menu_drawer_climate_icon"
            android:icon="@drawable/ic_climate"
            android:title="@string/climate_txt"
            app:showAsAction="always"/>
        <item
            android:id="@+id/menu_drawer_touristical_monuments_icon"
            android:icon="@drawable/ic_dome_of_the_rock"
            android:title="@string/touristical_monuments_txt"
            app:showAsAction="always"/>
        <item
            android:id="@+id/menu_drawer_news_icon"
            android:icon="@drawable/ic_last_news"
            android:title="@string/last_news_txt"
            app:showAsAction="always"/>
        <item
            android:id="@+id/menu_drawer_save_icon"
            android:icon="@drawable/ic_save_menu"
            android:title="المواضيع المحفوظة"
            app:showAsAction="always"/>
        <item
            android:id="@+id/menu_drawer_add_topic_icon"
            android:icon="@drawable/ic_add_topic"
            android:title="@string/add_topic_txt"
            app:showAsAction="always"/>
        <item
            android:id="@+id/menu_drawer_settings_icon"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings_txt"
            app:showAsAction="always"/>
    </group>

</menu>